2005-07-15  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am: Add new check-valgrind target for running the
	test suite under the influence of valgrind.
	
	* test/buffer-diff.c: (image_diff): Fix memory leak when reference
	image is not found.

2005-07-15  Carl Worth  <cworth@cworth.org>

	* test/mask.c: (set_gradient_pattern), (set_image_pattern),
	(draw): Fix a few memory leaks (missing cairo_pattern_destroy in 3
	places).

2005-07-15  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_mask): Fix memory leak,
	(missing _cairo_pattern_fini).

2005-07-15  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c (cairo_test_for_target): Remove errant line of
	code that was inadvertently committed recently.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/surface-finish-twice.c: (draw): Fix leak of surface.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-pdf-surface.c: (_cairo_pdf_surface_finish),
	(_cairo_pdf_document_finish): Call _cairo_array_fini on the
	several array objects to patch memory leaks.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-xlib-surface.c: (_cairo_xlib_surface_composite),
	(_cairo_xlib_surface_composite_trapezoids),
	(_cairo_xlib_surface_show_glyphs): Eek. Yet _more_ fixups for
	_cairo_pattern_release_surface missed earlier.

2005-08-14  Stuart Parmenter  <pavlov@pavlov.net>

	* src/cairo-win32-surface.c: (_cairo_win32_surface_fill_rectangles): 
	blue and green values were swapped in the DO_SOURCE case.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cairo_test_create_png_pattern): Rewrite to
	use cairo_image_surface_create_from_png rather than custom
	read_png_argb32. In addition to being simpler, this eliminates the
	leak of the image data buffer.
	
	* test/trap-clip.c: (set_gradient_pattern), (set_image_pattern):
	Add calls to cairo_pattern_destroy to close two memory leaks.

2005-07-14  Carl Worth  <cworth@cworth.org>
